# tgp

./: .gitignore  Ability.h  Action.h  Bot.h  CMakeLists.txt  Effect.h  Field.cpp  Field.h  FlatMap.h  GameEngine.cpp  GameEngine.h  GameHistory.h  GameServer.h  GameState.h  GreedyBot.h  MctsBot.cpp  MctsBot.h  Player.h  README.md  RandomBot.h  ResizableArray.h  Resources.h  ScoringBot.cpp  ScoringBot.h  StaticData.cpp  StaticData.h  Timer.h  Tournament.cpp  Tournament.h  Types.h  Utils.h  WebUiBot.cpp  WebUiBot.h  main.cpp  serialize.cpp  serialize.h
web/: main.html
